# pipecraft

./: .gitignore  README.md  compose.yaml
.github/workflows/: build.yml  ci.yml  security.yml  test.yml
go/: Dockerfile  go.mod
go/src/: main.go
go/src/api/: handlers.go
go/src/middlewares/: logger.go
go/src/models/: user.go
go/src/routes/: routes.go
go/src/store/: user_store.go
go/tests/: handlers_test.go
nextjs/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
nextjs/.next/: trace
nextjs/.next/cache/: .rscinfo  .tsbuildinfo
nextjs/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
nextjs/.next/server/app/: page.js  (+1 more)
nextjs/app/: layout.tsx  page.tsx
python/: Dockerfile  README.md  pyproject.toml  requirements.txt
python/src/: app.py  server.py
python/src/middlewares/: error_handler.py
python/src/routes/: users.py
python/src/schemas/: user_schema.py
python/src/services/: user_service.py
python/tests/: conftest.py  test_users.py
rust/: Cargo.toml  Dockerfile
rust/src/: app.rs  lib.rs  main.rs  server.rs
rust/src/middlewares/: error_handler.rs
rust/src/models/: user.rs
rust/src/routes/: users.rs
rust/tests/: integration_test.rs
typescript/: .dockerignore  Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: app.ts  server.ts
typescript/src/middlewares/: errorHandler.ts
typescript/src/models/: user.ts
typescript/src/routes/: users.ts
typescript/tests/: app.test.ts
(+22 files in other folders)
