[project]
name = "pipecraft"
version = "0.1.0"
description = "CRUD API with FastAPI"
authors = [{ name = "nadmax", email = "maximilien.nadji@pm.me" }]
package-mode = false
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
